--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^6.33.7",
 		"@opennextjs/cloudflare": "^1.3.0",
 		"next": "15.4.6",
 		"react": "19.1.0",
