--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^6.33.7",
+		"@clerk/themes": "^2.4.28",
 		"@opennextjs/cloudflare": "^1.3.0",
 		"next": "15.4.6",
 		"react": "19.1.0",
