Base de datos hecha y en teoria conectada, falta probar errores.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,7 +17,14 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
+	"d1_databases": [
+		{
+			"binding": "nextlevel_db",
+			"database_name": "nextlevel-db",
+			"database_id": "568a86be-c7ee-4834-b62f-502eb757e319"
+		}
+	]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
