--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
+		"dev:cf": "opennextjs-cloudflare dev",
+		"build:cf": "opennextjs-cloudflare build",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview --local",
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
