--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"dev:cf": "opennextjs-cloudflare dev",
-		"build:cf": "opennextjs-cloudflare build",
 		"build": "next build",
+		"build:cf": "opennextjs-cloudflare build",
 		"start": "next start",
 		"lint": "next lint",
-		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview --local",
+        "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+        
+        "preview": "npm run build:cf && opennextjs-cloudflare preview --local --config ./wrangler.jsonc",
+        
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
