--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -20,7 +20,7 @@
 	},
 	"d1_databases": [
 		{
-			"binding": "nextlevel_db",
+			"binding": "DB",
 			"database_name": "nextlevel-db",
 			"database_id": "568a86be-c7ee-4834-b62f-502eb757e319"
 		}
